	PR middle-end/37337 	* tree-ssa-dom.c (optimize_stmt): Call maybe_clean_or_replace_eh_stmt 	even when a stmt has been gimple_modified_p, but after fold_stmt is 	not any longer.  Remove unneeded may_have_exposed_new_symbols 	initializations.

* g++.dg/tree-ssa/pr37337.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@140117 138bc75d-0d04-0410-961f-82ee72b054a4